Fix overlapping on checkbox captcha

--- a/Snowdog_Components/components/Molecules/form/checkbox/_checkbox.scss
+++ b/Snowdog_Components/components/Molecules/form/checkbox/_checkbox.scss
@@ -126,4 +126,8 @@
         position: absolute;
         bottom: $checkbox__error-bottom;
     }
+
+    &.amgdpr-checkbox {
+        margin-bottom: $spacer;
+    }
 }
